@@ -1,5 +1,13 @@
 #!/bin/sh
 
+giveup()
+{
+        echo
+        echo "  Something went wrong, giving up!"
+        echo
+        exit 1
+}
+
 OSTYPE=`uname -s`
 
 #AMFLAGS="--add-missing --copy --force-missing"
@@ -9,15 +17,15 @@ if test "$OSTYPE" = "IRIX" -o "$OSTYPE" = "IRIX64"; then
 fi
 
 echo "Running autoheader"
-autoheader
+autoheader || giveup
 echo "Running aclocal -I macros"
-aclocal -I macros
+aclocal -I macros || giveup
 echo "Running libtoolize"
-libtoolize --force --copy
+libtoolize --force --copy || giveup
 echo "Running automake"
-automake $AMFLAGS
+automake $AMFLAGS || giveup
 echo "Running autoconf"
-autoconf
+autoconf || giveup
 
 echo "======================================"
 echo "Now you are ready to run './configure'"
